erDiagram
    USERS {
        uuid id PK
        varchar full_name
        varchar email UK
        varchar password_hash
        varchar role
        boolean is_active
        timestamptz created_at
        timestamptz updated_at
    }

    DRIVERS {
        uuid id PK
        uuid user_id FK
        varchar employee_number UK
        varchar licence_number UK
        date licence_expiry_date
        varchar phone_number
        varchar status
        boolean is_active
        timestamptz created_at
        timestamptz updated_at
    }

    VEHICLES {
        uuid id PK
        varchar registration_number UK
        varchar manufacturer
        varchar model
        integer manufacture_year
        numeric capacity_kg
        varchar status
        date last_service_date
        date next_service_date
        boolean is_active
        timestamptz created_at
        timestamptz updated_at
    }

    ROUTES {
        uuid id PK
        uuid driver_id FK
        uuid vehicle_id FK
        varchar route_code UK
        varchar origin
        varchar destination
        numeric planned_distance_km
        integer estimated_duration_minutes
        timestamptz scheduled_start_at
        timestamptz scheduled_end_at
        varchar status
        timestamptz created_at
        timestamptz updated_at
    }

    DELIVERIES {
        uuid id PK
        uuid route_id FK
        varchar tracking_number UK
        varchar sender_name
        varchar recipient_name
        varchar recipient_phone
        text delivery_address
        varchar status
        timestamptz expected_delivery_at
        timestamptz delivered_at
        text notes
        timestamptz created_at
        timestamptz updated_at
    }

    USERS o|--o| DRIVERS : may_have
    DRIVERS ||--o{ ROUTES : assigned_to
    VEHICLES ||--o{ ROUTES : used_for
    ROUTES ||--o{ DELIVERIES : contains
